--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -1,17 +1,46 @@
-shadow = true
-shadow-radius = 25
-shadow-opacity = 0.15
-shadow-offset-x = -30
-shadow-offset-y = -30
+corner-radius = 15
+detect-rounded-corners = true
+rounded-corners-exclude = [
+    "window_type = 'unknown'",
+    "window_type = 'desktop'",
+    # "window_type = 'dock'",
+    "window_type = 'toolbar'",
+    "window_type = 'menu'",
+    "window_type = 'utility'",
+    "window_type = 'splash'",
+    # "window_type = 'dialog'",
+    # "window_type = 'normal'",
+    "window_type = 'dropdown_menu'",
+    "window_type = 'popup_menu'",
+    "window_type = 'tooltip'",
+    # "window_type = 'notification'",
+    "window_type = 'combo'",
+    "window_type = 'dnd'"
+]
+round-borders = 0
+
+shadow-radius = 0
+shadow-opacity = 0
+shadow-offset-x = -0
+shadow-offset-y = -0
 shadow-ignore-shaped = false
+xinerama-shadow-crop = false
 
 fading = true
-fade-in-step = 0.035
-fade-out-step = 0.04
+fade-in-step = 0.03
+fade-out-step = 0.03
 fade-delta = 5
 
-active-opacity = 1.0
-inactive-opacity = 1.0
+inactive-opacity = 0.8
+
+blur-method = "dual_kawase"
+blur-size = 5
+blur-strength = 5
+blur-deviation = true
+blur-background = false
+blur-background-frame = false
+blur-background-fixed = false
+blur-kern = "11x11gaussian"
 
 experimental-backends = true
 backend = "glx"
@@ -19,27 +48,79 @@ vsync = true
 refresh-rate = 0
 
 wintypes: {
-    normal = {
+    unknown = {
         fade = true
-        shadow = true
-    }
-	tooltip = {
-        fade = true
-        shadow = true
-        opacity = 0.9
-        focus = true
+        shadow = false
         full-shadow = false
     }
-	dock = {
+    desktop = {
+        fade = true
         shadow = false
+        full-shadow = false
     }
-	dnd = {
+    dock = {
+        fade = true
         shadow = false
+        full-shadow = false
     }
-	popup_menu = {
-        opacity = 0.9
+    toolbar = {
+        fade = true
+        shadow = false
+        full-shadow = false
     }
-	dropdown_menu = {
-        opacity = 0.9
+    menu = {
+        fade = true
+        shadow = false
+        full-shadow = false
+    }
+    utility = {
+        fade = true
+        shadow = false
+        full-shadow = false
+    }
+    splash = {
+        fade = true
+        shadow = false
+        full-shadow = false
+    }
+    dialog = {
+        fade = true
+        shadow = false
+        full-shadow = false
+    }
+    normal = {
+        fade = true
+        shadow = false
+        full-shadow = false
+    }
+    dropdown_menu = {
+        fade = true
+        shadow = false
+        full-shadow = false
+    }
+    popup_menu = {
+        fade = true
+        shadow = false
+        full-shadow = false
+    }
+    tooltip = {
+        fade = true
+        shadow = false
+        full-shadow = false
+    }
+    notification = {
+        fade = true
+        shadow = false
+        full-shadow = false
+    }
+    combo = {
+        fade = true
+        shadow = false
+        full-shadow = false
+    }
+    dnd = {
+        fade = true
+        shadow = false
+        full-shadow = false
     }
 }
