--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -31,7 +31,8 @@ fade-in-step = 0.03
 fade-out-step = 0.03
 fade-delta = 5
 
-inactive-opacity = 0.8
+active-opacity = 0.8
+inactive-opacity = 0.7
 
 blur-method = "dual_kawase"
 blur-size = 5
